create response body for all requests and fix a few bugs
