# backend/internal/handler/user/RegisterUser.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"net/http"
 
+	"Trade-y-exp/internal/models"
 	authdb "Trade-y-exp/proto/auth"
 
 	"github.com/gin-gonic/gin"
@@ -18,9 +19,9 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        input  body      models.RegisterRequest  true  "Данные пользователя"
-// @Success      201    {object}  map[string]interface{} "Пользователь успешно создан"
-// @Failure      400    {object}  map[string]interface{} "Неверный формат данных"
-// @Failure      409    {object}  map[string]interface{} "Пользователь уже существует"
+// @Success      201    {object}  models.ResponseApi "Пользователь успешно создан"
+// @Failure      400    {object}  models.ResponseApi "Неверный формат данных"
+// @Failure      409    {object}  models.ResponseApi "Пользователь уже существует"
 // @Router       /register [post]
 func (h *Handler) Register(c *gin.Context) {
 	var req struct {
@@ -31,7 +32,11 @@ func (h *Handler) Register(c *gin.Context) {
 	}
 
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid data", "type": err})
+		c.JSON(http.StatusBadRequest, models.ResponseApi{
+			Status:  false,
+			Error:   err.Error(),
+			Message: "Invalid data",
+		})
 		return
 	}
 
@@ -44,13 +49,31 @@ func (h *Handler) Register(c *gin.Context) {
 	})
 	if err != nil {
 		if status.Code(err) == codes.AlreadyExists {
-			c.JSON(http.StatusConflict, gin.H{"error": "user exists"})
+			c.JSON(http.StatusConflict, models.ResponseApi{
+				Status:  false,
+				Error:   err.Error(),
+				Message: "User exists",
+			})
 			return
 		}
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "registration failed", "type": err})
+		c.JSON(http.StatusInternalServerError, models.ResponseApi{
+			Status:  false,
+			Error:   err.Error(),
+			Message: "Registraiton failed",
+		})
 		return
 	}
 
-	c.JSON(http.StatusCreated, gin.H{"status": "ok", "user_id": resp.UserId, "Username": resp.Username,
-		"Email": resp.Email})
+	responseApi := models.ResponseApi{
+		RequestID: "", // доделать с MiddleWare
+		Status:    true,
+		Message:   "User successfull login",
+		Result: models.AuthResponse{
+			Username:  resp.Username,
+			Email:     resp.Email,
+			FirstName: resp.Role,
+		},
+	}
+
+	c.JSON(http.StatusCreated, responseApi)
 }
